fixed definition of shape function

--- a/definitions.tex
+++ b/definitions.tex
@@ -24,15 +24,12 @@ In Plantage there are two different types of groups. One type contains only grou
 \end{figure}
 
 \section{Shape Function}
-A shape function is basically a list of possible layouts for a given circuit. This list is called shape function \figref{fig:shapefunction} because the minimum possible area for these placements is a hyperbolic function and the placements located near this forms a \emph{Pareto front}.
-
-% This is more like the definition for a Pareto front.
-% Here you should probably stress that the shape function is different from what it is usually defined as. The definition for a shape function is usually, "The minimum height given as a function of the width is called the shape function of the layout." So this makes it a "function."
+Actually a shape function is usually defined as the minimum height given as a function of the width. In this case Mr. Strasser used this term slightly different, in Plantage a shape function is basically a list of possible layouts for a given circuit. This list is called shape function \figref{fig:shapefunction} because the minimum possible area for these placements is a hyperbolic function and the placements located near this forms a \emph{Pareto front}.
 
 \begin{figure}
 	\centering
 	\includegraphics[scale=1.8]{FIG/shapefunction.png}
-	\caption{shapefunction with possible placements for a miller amplifier}
+	\caption{shape function with possible placements for a miller amplifier}
 	\label{fig:shapefunction}
 \end{figure}
 
